@@ -28,7 +28,8 @@ $ -> Language fix or change
 23-Jun-2013 Jean-Marie Simonet
  # [#31137] Changed tooltip html behavior back to pre-bootstrap 2.3.2 (so default on). Thanks Peter van Westen.
  + [#30966] Add handling for punycode urls and emails and fix a number of places where urls and emails are used. Thanks Elin Waring
-
+ # [#31168] Add chosen.css for com_templates and com_admin. Thanks Tobias Zulauf
+ 
 21-Jun-2013 Jean-Marie Simonet
  $ Missing language string (hardcoded)
  # [#31186] Some HTML errors. Thanks Achal Aggarwal
